--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,17 @@
 *{
     padding: 0;
     margin: 0;
-    background-color:rgb(39, 38, 38);
+   
+}
+body{
+    background-color:black;
 }
 /*TITILO*/
 #titulo{
 margin: auto;
 width: 205px;
 height: 40px;
-color: white;
+color: rgb(217,217,217);
 }
 /*LOGO*/
 div#Logo{
@@ -23,10 +26,9 @@ height: 50px;
     margin: auto;
     width: 113px;
     height: 50px;
-    color: white;
+    color: rgb(217,217,217);
 }
 #central{
-    background-color: tomato;
     max-width: 100%;
 }
 
@@ -34,30 +36,138 @@ height: 50px;
     display: block;
     margin: 15px;
     width: 250px;
-    height: 250px;
+    height: 500px;
     margin-top: 15px;
     margin-bottom: 40px;
     margin-left: 40px;
     margin-right: 40px;
     padding: 20px; 
     float: left;
+    background: black;  
+    box-shadow: 5px 5px black;
+    border: solid 5px white;
 }
 
 /*MENU IZQUIERDO*/
 #menu1{
-    background-color: grey;  
-    border:solid red 5px;
+    color: white;
+    
 }
+#bebidas{
+    text-align: center;
+    font-style: italic;
+    font-size: 30px;
+    color: white;
+    margin-bottom:10px ;
+}
+#menu1 ul{
+  list-style: none;
+  text-align: center;
+  font-size: 16px;
+  margin: 0px ;
+  width: 250px;
+  
+}
+#menu1 > ul > li {
+    line-height: 20px;
+    margin-top: 40px;
+    border: solid 2px white;
+    transition: all 300ms;
+  }
+#menu1 > ul > li:hover {
+    background-color: rgb(198,189,233);
+    box-shadow: 0px 0px 4px rgb(188,202,236);
+  }
+
+#menu1 >ul > li > ul {
+    display: none;
+    position: absolute;
+    width: 250px;
+    box-shadow: 0px 2px 2px gray;
+    z-index: 1;
+  }
+
+#menu1 > ul > li:hover > ul {
+    display: block;
+  }
+#menu1 > ul > li:hover > ul > li {
+    background-color: black;
+    border-bottom: 1px solid #d6d6d6;
+    padding: 8px;
+    line-height: 25px;
+    font-size: 13px;
+  }
+#menu1 > ul > li:hover > ul > li:hover {
+    box-shadow: 0px 0px 6px #ccc inset;
+  }
 /*CARRUSEL*/
 #scroll{
-    background-color: grey;
+    padding: 0px; 
     margin-left: 10px;
     margin-right: 10px;
-    height: 500px;
+    height: 600px;
     width: 620px;
+    border: none;
 }
+
 /*MENU DERECHO*/
 #menu2{
-    border:solid red 5px;
-    background-color: grey;
+    color: white;
+    
 }
+#bebidas{
+    text-align: center;
+    font-style: italic;
+    font-size: 30px;
+    color: white;
+    margin-bottom:10px ;
+}
+#menu2 ul{
+  list-style: none;
+  text-align: center;
+  font-size: 16px;
+  margin: 0px ;
+  width: 250px;
+  
+}
+#menu2 > ul > li {
+    line-height: 20px;
+    margin-top: 40px;
+    border: solid 2px white;
+    transition: all 300ms;
+  }
+#menu2 > ul > li:hover {
+    background-color: rgb(198,189,233);
+    box-shadow: 0px 0px 4px rgb(188,202,236);
+  }
+
+#menu2 >ul > li > ul {
+    display: none;
+    position: absolute;
+    width: 250px;
+    box-shadow: 0px 2px 2px gray;
+    z-index: 1;
+  }
+
+#menu2 > ul > li:hover > ul {
+    display: block;
+  }
+#menu2 > ul > li:hover > ul > li {
+    background-color: black;
+    border-bottom: 1px solid #d6d6d6;
+    padding: 8px;
+    line-height: 25px;
+    font-size: 13px;
+  }
+#menu2 > ul > li:hover > ul > li:hover {
+    box-shadow: 0px 0px 6px #ccc inset;
+  }
+footer{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+.clearfix{
+    float: none;
+    clear: left;
+  }
